2007-07-13  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, reporting an error even when DCC file sending completed successfully.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented reordering servers and channels.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>

	Completed reorder server tree dialog.

2007-07-12  Satoshi Nakagawa <artension@gmail.com>

	Working on reorder server tree dialog.

2007-07-11  Satoshi Nakagawa <artension@gmail.com>

	Implemented drag and drop operations on channels tab, server dialog.

2007-07-10  Satoshi Nakagawa <artension@gmail.com>

	Completed channels tab on server dialog.
	Fixed a bug, when a talk item is selected, starting add server will create a talk type channel.
	Changed to insert new channel or talk items to an appropriate position.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Implemented leaving comment.
	Implemented invisible user mode.
	Changed to use quit on disconnect from menu.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crushes when inputted irregular text on current encoding.

2007-07-09  Satoshi Nakagawa <artension@gmail.com>

	Changed encoding defaults, ISO-2022-JP for Japanese, UTF-8 for others.

2007-07-08  Satoshi Nakagawa <artension@gmail.com>

	Added double click servers to connect or disconnect.
	Added double click channels to join or part.

2007-07-06  Satoshi Nakagawa <artension@gmail.com>

	Changed to use AsyncSocket for DCC file sending.
	Cut off needless objc_method.
	Fixed a bug, port should be stored as integer.

2007-07-06  Satoshi Nakagawa <artension@gmail.com>

	Changed type encodings of TcpClient#onSocket_didConnectToHost_port.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Changed to view connecting status of DCC file receiver items.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>

	Replaced all '...' to \U2026 in nib files.

2007-07-05  Satoshi Nakagawa <artension@gmail.com>
