@@ -1,5 +1,9 @@
 2007-07-13  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to parse inputted commands: msg, privmsg, notice, nick, quit.
+
+2007-07-13  Satoshi Nakagawa <artension@gmail.com>
+
 	Fixed a bug, reporting an error even when DCC file sending completed successfully.
 
 2007-07-12  Satoshi Nakagawa <artension@gmail.com>
